projects/compiler/test/typechecker/indexing/error_indexing_map_nullable.out
Error at %FILE_NAME%:2:1
Unsupported indexing operation
  |  map["c"]
     ^
Type 'Map<String, Int>?' is not indexable
